--- a/index.html
+++ b/index.html
@@ -422,10 +422,17 @@ const state = {
 };
 
 const PRESETS = [
-    { id: 'super_green', name: 'Super Green Mix', contents: 'Sunflower, Pea, Broccoli & Kale', img: 'https://iili.io/KocaUUQ.md.png' },
-    { id: 'spicy_green', name: 'Spicy Green Mix', contents: 'Purple Radish, Purple Kohlrabi & Arugula', img: 'https://iili.io/KocaUUQ.md.png' }
+    { id: 'super_green', name: 'Super Green Mix', contents: 'Sunflower, Pea, Broccoli & Kale', img: 'https://iili.io/KocaUUQ.md.png', prices: { 8: 15.00, 16: 25.00 } },
+    { id: 'spicy_green', name: 'Spicy Green Mix', contents: 'Purple Radish, Purple Kohlrabi & Arugula', img: 'https://iili.io/KocaUUQ.md.png', prices: { 8: 15.00, 16: 25.00 } }
 ];
-const CROPS = ['Sunflower', 'Pea', 'Broccoli', 'Purple Radish', 'Kale', 'Purple Kohlrabi'];
+const CROPS = {
+    'Sunflower': { pricePerUnit: 8 },
+    'Pea': { pricePerUnit: 8 },
+    'Broccoli': { pricePerUnit: 8 },
+    'Purple Radish': { pricePerUnit: 8 },
+    'Kale': { pricePerUnit: 8 },
+    'Purple Kohlrabi': { pricePerUnit: 8 }
+};
 
 // --- DOM Elements ---
 const modal = document.getElementById('subscription-modal');
@@ -627,7 +634,7 @@ function generateCustomBuilderHTML() {
             <div>
                 <h4 class="font-semibold text-center mb-3">Available Greens</h4>
                 <div class="space-y-2">
-                ${CROPS.map(crop => `
+                ${Object.keys(CROPS).map(crop => `
                     <div class="flex items-center justify-between p-2 bg-gray-50 rounded-lg">
                         <span>${crop}</span>
                         <button class="add-btn" data-crop="${crop}"></button>
@@ -654,10 +661,16 @@ function updateSummaryAndPrice() {
     const totalEl = document.getElementById('summary-total-price');
     let basePrice = 0;
     let summaryHTML = '';
+    const items = [];
 
     if (state.orderType === 'preset' && state.selectedPreset && state.selectedPresetSize) {
-        basePrice = state.selectedPresetSize === 8 ? 15.00 : 25.00;
+        basePrice = state.selectedPreset.prices[state.selectedPresetSize];
         summaryHTML = `<p><strong>${state.selectedPreset.name} (${state.selectedPresetSize}oz)</strong></p>`;
+        items.push({
+            name: `${state.selectedPreset.name} (${state.selectedPresetSize}oz)`,
+            price: basePrice,
+            quantity: 1
+        });
     } else if (state.orderType === 'custom') {
         let totalUnits = Object.values(state.customBox).reduce((sum, qty) => sum + qty, 0);
 
@@ -674,6 +687,11 @@ function updateSummaryAndPrice() {
         if(totalUnits > 0) {
             for (const [crop, qty] of Object.entries(state.customBox)) {
                 summaryHTML += `<p class="pl-2 text-sm text-gray-600">${qty} x ${crop} (4oz)</p>`;
+                items.push({
+                    name: `${crop} (4oz)`,
+                    price: 7.00, // A fixed price per unit for custom boxes, adjust as needed
+                    quantity: qty
+                });
             }
         }
     }
@@ -689,6 +707,7 @@ function updateSummaryAndPrice() {
     }
 
     state.totalPrice = finalPrice;
+    state.items = items; // Store the items array for the fetch call
     summaryEl.innerHTML = summaryHTML;
     totalEl.textContent = `$${finalPrice.toFixed(2)}`;
 }
@@ -734,13 +753,12 @@ async function handleFormSubmit(event) {
     submitButton.textContent = 'Processing...';
 
     try {
-        // This is a placeholder URL. You will need to replace this with the actual URL of your backend server.
-        const response = await fetch('/create-checkout-session', {
+        const response = await fetch('/.netlify/functions/create-checkout-session', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json',
             },
-            body: JSON.stringify(state),
+            body: JSON.stringify({ items: state.items }),
         });
 
         const session = await response.json();
@@ -753,9 +771,9 @@ async function handleFormSubmit(event) {
         }
 
         // IMPORTANT: Replace with your actual Stripe publishable key.
-        const stripe = Stripe('pk_test_TYooMQauvdEDq54NiTphI7jx'); // Example Test Key
+        const stripe = Stripe('pk_test_51P8i4X054W6g6D0Y1yv0u8H0jV645D0846h5L8sL8u8L5c084hY0lC04W6g6D0Y1yv0u8H0jV645D0846h5L8sL8u8L5c0'); 
         const result = await stripe.redirectToCheckout({
-            sessionId: session.id
+            sessionId: session.sessionId // Use sessionId from backend response
         });
 
         if (result.error) {
