orders-dashboard.html

--- a/orders-dashboard.html
+++ b/orders-dashboard.html
@@ -10,14 +10,23 @@
     import { getFirestore, collection, query, orderBy, onSnapshot } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
 
     // TODO: Replace with your Firebase project config
-    const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_PROJECT_ID.appspot.com",
-      messagingSenderId: "YOUR_SENDER_ID",
-      appId: "YOUR_APP_ID"
-    };
+   const firebaseConfig = {
+
+  apiKey: "AIzaSyDcwybZJui1WKAujPclyPgBaj_bE7IK-tg",
+
+  authDomain: "fourth-gate-microgreens.firebaseapp.com",
+
+  projectId: "fourth-gate-microgreens",
+
+  storageBucket: "fourth-gate-microgreens.firebasestorage.app",
+
+  messagingSenderId: "601340343009",
+
+  appId: "1:601340343009:web:3ba10d82fca3252b3b3da0",
+
+  measurementId: "G-GM9VW1NRV9"
+
+};
 
     // Init
     const app = initializeApp(firebaseConfig);
