--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ body {
 
 
 <!-- Hero Section -->
-<section class="relative h-screen flex items-center justify-center text-center text-white bg-cover bg-center" style="background-image: url('https://freeimage.host/i/Ko8WFpe');">
+<section class="relative h-screen flex items-center justify-center text-center text-white bg-cover bg-center" style="background-image: url('https://iili.io/Ko8WFpe.md.png');">
     <div class="absolute inset-0 bg-black/50 z-10"></div>
     <div class="relative z-20 max-w-4xl px-6">
         <h1 class="text-6xl md:text-8xl hero-headline">
