--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ body {
 
 <!-- Navigation -->
 <header class="absolute w-full z-50 px-6 py-5 flex justify-between items-center text-white">
-    <a href="#" class="text-3xl font-bold tracking-tighter" style="font-family: 'Playfair Display', serif;">Fourth Gate</a>
+    <a href="#" class="text-3xl font-bold tracking-tighter" style="font-family: 'Playfair Display', serif;">Fourth Gate Microgreens</a>
     <nav class="hidden md:flex space-x-8 font-medium items-center">
         <a href="#how-it-works" class="hover:text-amber-100 transition">How It Works</a>
         <a href="#about-us" class="hover:text-amber-100 transition">Our Story</a>
