--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ body {
     <div class="absolute inset-0 bg-black/50 z-10"></div>
     <div class="relative z-20 max-w-4xl px-6">
         <h1 class="text-6xl md:text-8xl hero-headline">
-            Open the Gate to Health.
+            Open the Gate to Health
         </h1>
         <p class="mt-6 text-xl md:text-2xl font-light text-gray-200 max-w-2xl mx-auto">
             Nutrient-dense, farm-fresh microgreens delivered from our indoor farm right to your door.
