--- a/index.html
+++ b/index.html
@@ -436,32 +436,32 @@ const CROP_NAMES = ['Sunflower', 'Pea', 'Broccoli', 'Purple Radish', 'Kale', 'Pu
 const PRICE_IDS = {
     SUPER_GREEN_8OZ: {
         weekly: 'price_1S4wv1QQDP18MPc4nFdsPROY',
-        'biweekly': 'price_1S4wxTQQDP18MPc44MHhwUJ5',
+        biweekly: 'price_1S4wxTQQDP18MPc44MHhwUJ5',
         monthly: 'price_1S4wxTQQDP18MPc4fkRfNxDp',
     },
     SUPER_GREEN_16OZ: {
         weekly: 'price_1S4x6bQQDP18MPc47IvvrDqS',
-        'biweekly': 'price_1S4x7eQQDP18MPc4yyupWYah',
+        biweekly: 'price_1S4x7eQQDP18MPc4yyupWYah',
         monthly: 'price_1S4x7eQQDP18MPc49UqLB7m5',
     },
     SPICY_GREEN_8OZ: {
         weekly: 'price_1S4wxyQQDP18MPc4IqtJHATF',
-        'biweekly': 'price_1S4wytQQDP18MPc4u4xPvXp9',
+        biweekly: 'price_1S4wytQQDP18MPc4u4xPvXp9',
         monthly: 'price_1S4wytQQDP18MPc41D5i5ZCQ',
     },
     SPICY_GREEN_16OZ: {
         weekly: 'price_1S4x1aQQDP18MPc4VUG1rcFM',
-        'biweekly': 'price_1S4x3JQQDP18MPc47HahYImC',
+        biweekly: 'price_1S4x3JQQDP18MPc47HahYImC',
         monthly: 'price_1S4x3JQQDP18MPc4mcIGLbTz',
     },
     CUSTOM_8OZ: { // For custom boxes of 1-2 units (4-8oz)
         weekly: 'price_1S4x9HQQDP18MPc4hxPX7vdc',
-        'biweekly': 'price_1S4xBHQQDP18MPc4l8iZlswN',
+        biweekly: 'price_1S4xBHQQDP18MPc4l8iZlswN',
         monthly: 'price_1S4xBHQQDP18MPc4XL9Nzkya',
     },
     CUSTOM_16OZ: { // For custom boxes of 3+ units (12oz+)
         weekly: 'price_1S4x9nQQDP18MPc4MtZmQUVY',
-        'biweekly': 'price_1S4xBqQQDP18MPc4pdkz7C1J',
+        biweekly: 'price_1S4xBqQQDP18MPc4pdkz7C1J',
         monthly: 'price_1S4xBqQQDP18MPc44YVz4D7L',
     },
 };
