--- a/index.html
+++ b/index.html
@@ -337,8 +337,8 @@ body {
                     </p>
                 </div>
                 <div class="grid grid-cols-2 gap-4 reveal" style="transition-delay: 150ms;">
-                    <img src="https://images.pexels.com/photos/5958017/pexels-photo-5958017.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="A farmer's hands carefully harvesting fresh broccoli microgreens with shears." class="rounded-3xl shadow-xl w-full h-full object-cover aspect-[4/5]">
-                    <img src="https://images.pexels.com/photos/7248386/pexels-photo-7248386.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Multiple trays of vibrant microgreens growing under lights in an indoor farm." class="rounded-3xl shadow-xl w-full h-full object-cover aspect-[4/5] mt-8">
+                    <img src="https://iili.io/Kz9baPs.md.png" alt="A close-up of fresh, vibrant microgreens ready for harvest." class="rounded-3xl shadow-xl w-full h-full object-cover aspect-[4/5]">
+                    <img src="https://iili.io/KzHHCYb.md.png" alt="A bowl of salad topped with a colorful variety of freshly harvested microgreens." class="rounded-3xl shadow-xl w-full h-full object-cover aspect-[4/5] mt-8">
                 </div>
             </div>
         </div>
@@ -925,7 +925,4 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
-
-
-
 
