--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ body {
     <div class="absolute inset-0 bg-black/50 z-10"></div>
     <div class="relative z-20 max-w-4xl px-6">
         <h1 class="text-6xl md:text-8xl hero-headline">
-            Open the Gate to Health
+            Fourth Gate Microgreens
         </h1>
         <p class="mt-6 text-xl md:text-2xl font-light text-gray-200 max-w-2xl mx-auto">
             Nutrient-dense, farm-fresh microgreens delivered from our indoor farm right to your door.
@@ -336,10 +336,10 @@ body {
             <div class="mt-16 grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
                 <div class="space-y-6 reveal">
                     <p class="text-lg leading-relaxed">
-                        Fourth Gate Microgreens was founded on a simple belief: everyone deserves access to the freshest, most nutrient-dense food possible. Our journey began with a small indoor farm and a passion for sustainable agriculture.
+                        Fourth gate microgreens was founded on a simple belief; everyone deserves access to fresh, local and sustainably grown nutrient rich foods. As owner and head grower my journey in agriculture has been life long. From working on various farms throughout Oregon, being in the professional landscaping industry and going to school studying both horticulture and permaculture.. Working with plants and nature is a labor of love for me, my biggest passion in life and the gift I enjoy sharing most with others. This offering of sharing my passions and gifts with my community through these greens comes straight from the heart.
                     </p>
                     <p class="text-lg leading-relaxed">
-                        We are committed to a healthier planet, using only organic, earth-friendly methods to bring the vibrant power of nature straight to your table.
+						We are committed to a healthier planet, using only organic, earth-friendly methods to bring the vibrant power of nature straight to your table.
                     </p>
                 </div>
                 <div class="grid grid-cols-2 gap-4 reveal" style="transition-delay: 150ms;">
