--- a/index.html
+++ b/index.html
@@ -299,16 +299,17 @@ body {
     <section id="how-it-works" class="py-24 glowing-green-bg">
         <div class="max-w-6xl mx-auto px-6 text-center">
             <h2 class="text-4xl md:text-5xl section-title reveal">So Fresh, So Simple.</h2>
-            <p class="mt-4 text-lg text-gray-800 reveal">Getting started with fresh microgreens is easy.</p>
+            <p class="mt-4 text-lg text-gray-800 reveal">We’re grow-to-order. New subscriptions and changes begin 2 weeks from today.</p>
             <div class="mt-20 grid grid-cols-1 md:grid-cols-3 gap-10">
                 <!-- Step 1 -->
-                <div class="p-10 rounded-3xl transition transform hover:-translate-y-2 bg-white shadow-xl reveal">
-                    <div class="w-20 h-20 mx-auto flex items-center justify-center bg-green-100 rounded-full mb-6">
-                        <svg class="w-10 h-10 text-green-700" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path></svg>
-                    </div>
-                    <h3 class="text-xl font-semibold">1. Select Your Plan</h3>
-                    <p class="mt-3 text-stone-700">Choose from curated boxes or build your own. Delivered weekly, bi-weekly, or monthly.</p>
-                </div>
+                <div id="step-1" class="step-content">
+  <h3 class="text-3xl font-bold text-center mb-3" style="font-family: 'Playfair Display', serif;">Build Your Weekly Box</h3>
+  <p class="text-center text-gray-600 mb-6 text-sm">
+    Choose <strong>2–4 items</strong>. Each item is <strong>4oz</strong>. Pricing: <strong>$15</strong> for 2 items (8oz), <strong>$21</strong> for 3 (12oz), <strong>$26</strong> for 4 (16oz).
+    <br/>New subscriptions and changes take effect <strong>in 2 weeks</strong> (grow-to-order).
+  </p>
+  <div id="step-1-content" class="mt-4"></div>
+</div>
                 <!-- Step 2 -->
                 <div class="p-10 rounded-3xl transition transform hover:-translate-y-2 bg-white shadow-xl reveal" style="transition-delay: 150ms;">
                     <div class="w-20 h-20 mx-auto flex items-center justify-center bg-green-100 rounded-full mb-6">
