--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@ body {
     height: 56.25vw; /* 100 * 9 / 16 = 56.25 */
     min-height: 100vh;
     min-width: 177.77vh; /* 100 * 16 / 9 = 177.77 */
+    pointer-events: none; /* Prevents user interaction with the video */
 }
 </style>
 </head>
@@ -273,10 +274,9 @@ body {
     <!-- Background Video -->
     <iframe
         class="video-background"
-        src="https://www.youtube.com/embed/R7E-OD9J6Z0?autoplay=1&mute=1&loop=1&playlist=R7E-OD9J6Z0&controls=0&showinfo=0&rel=0&start=8000"
+        src="https://www.youtube.com/embed/R7E-OD9J6Z0?autoplay=1&mute=1&loop=1&playlist=R7E-OD9J6Z0&controls=0&showinfo=0&rel=0&playsinline=1&start=10"
         frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen>
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">
     </iframe>
     <div class="absolute inset-0 bg-black/50 z-10"></div>
     <div class="relative z-20 max-w-4xl px-6">
@@ -800,5 +800,4 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
-
 
