--- a/index.html
+++ b/index.html
@@ -227,20 +227,6 @@ body {
     background: radial-gradient(ellipse at 50% 0%, #d8e7d7, #b1d0b0 80%);
 }
 
-/* Style for YouTube video background */
-.video-background {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 1;
-    /* These values ensure the video covers the screen without black bars */
-    width: 100vw;
-    height: 56.25vw; /* 100 * 9 / 16 = 56.25 */
-    min-height: 100vh;
-    min-width: 177.77vh; /* 100 * 16 / 9 = 177.77 */
-    pointer-events: none; /* Prevents user interaction with the video */
-}
 </style>
 </head>
 <body class="text-stone-900">
@@ -270,14 +256,9 @@ body {
 
 
 <!-- Hero Section -->
-<section class="relative h-screen flex items-center justify-center text-center text-white overflow-hidden">
-    <!-- Background Video -->
-    <iframe
-        class="video-background"
-        src="https://www.youtube.com/embed/R7E-OD9J6Z0?autoplay=1&mute=1&loop=1&playlist=R7E-OD9J6Z0&controls=0&showinfo=0&rel=0&playsinline=1&start=10"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">
-    </iframe>
+<section
+    class="relative h-screen flex items-center justify-center text-center text-white overflow-hidden bg-cover bg-center"
+    style="background-image: url('https://images.unsplash.com/photo-1530103862676-de8c9debad1d?q=80&w=2070&auto=format&fit=crop');">
     <div class="absolute inset-0 bg-black/50 z-10"></div>
     <div class="relative z-20 max-w-4xl px-6">
         <h1 class="text-6xl md:text-8xl hero-headline">
@@ -306,8 +287,8 @@ body {
                     <div class="w-20 h-20 mx-auto flex items-center justify-center bg-green-100 rounded-full mb-6">
                         <svg class="w-10 h-10 text-green-700" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path></svg>
                     </div>
-                    <h3 class="text-xl font-semibold">1. Select Your Plan</h3>
-                    <p class="mt-3 text-stone-700">Choose from curated boxes or build your own. Delivered weekly, bi-weekly, or monthly.</p>
+                    <h3 class="text-xl font-semibold">1. Build Your Box</h3>
+                    <p class="mt-3 text-stone-700">Build your custom box for fresh, nutrient-dense microgreens delivered weekly.</p>
                 </div>
                 <!-- Step 2 -->
                 <div class="p-10 rounded-3xl transition transform hover:-translate-y-2 bg-white shadow-xl reveal" style="transition-delay: 150ms;">
@@ -800,4 +781,5 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
 
