--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ body {
 <!-- Hero Section -->
 <section
     class="relative h-screen flex items-center justify-center text-center text-white overflow-hidden bg-cover bg-center"
-    style="background-image: url('https://images.unsplash.com/photo-1530103862676-de8c9debad1d?q=80&w=2070&auto=format&fit=crop');">
+    style="background-image: url('https://i.redd.it/wwov4jxn01xb1.jpg');">
     <div class="absolute inset-0 bg-black/50 z-10"></div>
     <div class="relative z-20 max-w-4xl px-6">
         <h1 class="text-6xl md:text-8xl hero-headline">
