--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@ body {
         <a href="#how-it-works" class="hover:text-amber-100 transition">How It Works</a>
         <a href="#about-us" class="hover:text-amber-100 transition">Our Story</a>
         <a href="#subscription" class="hover:text-amber-100 transition">Plans</a>
+        <a href="#manage-subscription" class="hover:text-amber-100 transition">Manage Subscription</a> <!-- ADDED -->
         <button id="nav-order-btn" class="btn-secondary !text-sm !py-2 !px-5">Order Now</button>
     </nav>
     <button id="mobile-menu-btn" class="md:hidden p-2 rounded-lg bg-white/20 text-white">
@@ -250,6 +251,7 @@ body {
         <a href="#how-it-works" class="mobile-nav-link">How It Works</a>
         <a href="#about-us" class="mobile-nav-link">Our Story</a>
         <a href="#subscription" class="mobile-nav-link">Plans</a>
+        <a href="#manage-subscription" class="mobile-nav-link">Manage Subscription</a> <!-- ADDED -->
         <button class="btn-primary mt-8 mobile-nav-link">Order Now</button>
     </div>
 </div>
@@ -346,7 +348,21 @@ body {
     </section>
 </main>
 <!-- Footer -->
-<footer class="bg-[#2D4026] text-gray-400 py-10 text-center relative z-10">
+<footer class="bg-[#2D4026] text-gray-400 py-16 text-center relative z-10"> <!-- Increased padding -->
+    
+    <!-- ADDED SECTION -->
+    <div id="manage-subscription" class="max-w-2xl mx-auto px-6 mb-12 scroll-mt-20"> <!-- scroll-mt-20 to offset header -->
+        <h3 class="text-2xl font-semibold text-white mb-4" style="font-family: 'Playfair Display', serif;">
+            Subscription Management
+        </h3>
+        <p class="text-gray-300 leading-relaxed">
+            Need to pause, skip a delivery, or cancel your subscription? No problem!
+            <br>
+            Please contact us directly at <a href="mailto:your-email@example.com" class="font-bold text-white underline hover:text-green-200 transition">your-email@example.com</a> or simply reply to any of your order confirmation emails, and we'll take care of it for you.
+        </p>
+    </div>
+    <!-- END ADDED SECTION -->
+
     <p>&copy; 2024 Fourth Gate Microgreens. All rights reserved.</p>
 </footer>
 
