--- a/index.html
+++ b/index.html
@@ -237,8 +237,9 @@ body {
     <nav class="hidden md:flex space-x-8 font-medium items-center">
         <a href="#how-it-works" class="hover:text-amber-100 transition">How It Works</a>
         <a href="#about-us" class="hover:text-amber-100 transition">Our Story</a>
+        <a href="#nutrition" class="hover:text-amber-100 transition">Nutrition & Uses</a> <!-- ADDED -->
         <a href="#subscription" class="hover:text-amber-100 transition">Plans</a>
-        <a href="#manage-subscription" class="hover:text-amber-100 transition">Manage Subscription</a> <!-- ADDED -->
+        <a href="#manage-subscription" class="hover:text-amber-100 transition">Manage Subscription</a>
         <button id="nav-order-btn" class="btn-secondary !text-sm !py-2 !px-5">Order Now</button>
     </nav>
     <button id="mobile-menu-btn" class="md:hidden p-2 rounded-lg bg-white/20 text-white">
@@ -250,8 +251,9 @@ body {
     <div class="flex flex-col items-center justify-center h-full space-y-8 text-white text-2xl font-medium">
         <a href="#how-it-works" class="mobile-nav-link">How It Works</a>
         <a href="#about-us" class="mobile-nav-link">Our Story</a>
+        <a href="#nutrition" class="mobile-nav-link">Nutrition & Uses</a> <!-- ADDED -->
         <a href="#subscription" class="mobile-nav-link">Plans</a>
-        <a href="#manage-subscription" class="mobile-nav-link">Manage Subscription</a> <!-- ADDED -->
+        <a href="#manage-subscription" class="mobile-nav-link">Manage Subscription</a>
         <button class="btn-primary mt-8 mobile-nav-link">Order Now</button>
     </div>
 </div>
@@ -271,7 +273,7 @@ body {
         </p>
         <!-- ADDED DELIVERY AREA NOTICE -->
         <p class="mt-4 text-lg font-medium text-green-200 bg-black/30 inline-block px-4 py-2 rounded-full backdrop-blur-sm">
-            Currently delivering to East Portland, Gresham, and Troutdale.
+            Currently delivering to Eastside Portland, Gresham, and Troutdale.
         </p>
         <!-- END ADDED NOTICE -->
         <div class="mt-12 flex justify-center">
@@ -317,22 +319,99 @@ body {
         </div>
     </section>
 
-    <!-- About Us Section -->
-    <section id="about-us" class="py-24 bg-white text-[#2D4026]">
-        <div class="max-w-6xl mx-auto px-6">
-            <h2 class="text-4xl md:text-5xl section-title text-center reveal">Grown With Passion, For You.</h2>
-            <div class="mt-16 grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
-                <div class="space-y-6 reveal">
-                    <p class="text-lg leading-relaxed">
-                        Fourth gate microgreens was founded on a simple belief; everyone deserves access to fresh, local and sustainably grown nutrient rich foods. As owner and head grower my journey in agriculture has been life long. From working on various farms throughout Oregon, being in the professional landscaping industry and going to school studying both horticulture and permaculture.. Working with plants and nature is a labor of love for me, my biggest passion in life and the gift I enjoy sharing most with others. This offering of sharing my passions and gifts with my community through these greens comes straight from the heart.
-                    </p>
-                    <p class="text-lg leading-relaxed">
-						We are committed to a healthier planet, using only organic, earth-friendly methods to bring the vibrant power of nature straight to your table.
-                    </p>
+    <!-- Nutrition & Culinary Uses Section -->
+    <section id="nutrition" class="py-24 bg-[#F2F9F2]">
+        <div class="max-w-4xl mx-auto px-6">
+            <h2 class="text-4xl md:text-5xl section-title text-center reveal mb-12">Nature's Power on Your Plate</h2>
+            
+            <div class="space-y-4 reveal">
+                <!-- Nutritional Profiles Accordion -->
+                <div class="bg-white rounded-2xl shadow-sm overflow-hidden">
+                    <button class="accordion-btn w-full flex items-center justify-between p-6 text-left focus:outline-none">
+                        <h3 class="text-2xl font-serif text-[#2D4026]">Nutritional Profiles</h3>
+                        <span class="transform transition-transform duration-300 text-[#3B7235]">
+                            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
+                        </span>
+                    </button>
+                    <div class="accordion-content hidden px-6 pb-6">
+                        <div class="space-y-6 font-light pt-4 border-t border-gray-100">
+                            <div class="grid grid-cols-[1fr_2fr] gap-4 items-baseline">
+                                <h4 class="text-lg font-medium text-[#3B7235]">Radish</h4>
+                                <p class="text-stone-700 text-sm leading-relaxed">Vitamins A, B, C, E, K, Calcium, Iron, Magnesium, Phosphorus, Potassium, Zinc, Amino Acids</p>
+                            </div>
+                            <div class="grid grid-cols-[1fr_2fr] gap-4 items-baseline">
+                                <h4 class="text-lg font-medium text-[#3B7235]">Broccoli</h4>
+                                <p class="text-stone-700 text-sm leading-relaxed">Sulforaphane, Vitamins A, B-Complex, C, E, Potassium, Phosphorus, Calcium, Magnesium, Fiber</p>
+                            </div>
+                             <div class="grid grid-cols-[1fr_2fr] gap-4 items-baseline">
+                                <h4 class="text-lg font-medium text-[#3B7235]">Peas</h4>
+                                <p class="text-stone-700 text-sm leading-relaxed">Vitamins A, C, E, B1, B2, B3, B6, Protein, Fiber, Omega-3</p>
+                            </div>
+                            <div class="grid grid-cols-[1fr_2fr] gap-4 items-baseline">
+                                <h4 class="text-lg font-medium text-[#3B7235]">Kale</h4>
+                                <p class="text-stone-700 text-sm leading-relaxed">Vitamins A, B6, C, K, Folate, Fiber, Carotenoids, Manganese</p>
+                            </div>
+                            <div class="grid grid-cols-[1fr_2fr] gap-4 items-baseline">
+                                <h4 class="text-lg font-medium text-[#3B7235]">Lettuce</h4>
+                                <p class="text-stone-700 text-sm leading-relaxed">Vitamins A, C, K, Folate, Fiber, Potassium, Calcium, Iron, Magnesium</p>
+                            </div>
+                             <div class="grid grid-cols-[1fr_2fr] gap-4 items-baseline">
+                                <h4 class="text-lg font-medium text-[#3B7235]">Cabbage</h4>
+                                <p class="text-stone-700 text-sm leading-relaxed">Vitamins C, K, A, B6, Folate, Manganese, Thiamin, Potassium, Calcium, Magnesium, Pantothenic Acid</p>
+                            </div>
+                            <div class="grid grid-cols-[1fr_2fr] gap-4 items-baseline">
+                                <h4 class="text-lg font-medium text-[#3B7235]">Sunflower</h4>
+                                <p class="text-stone-700 text-sm leading-relaxed">Fiber, Protein, Essential Fatty Acids, Vitamins A, B Complex, C, Potassium, Magnesium, Zinc, Manganese, Copper, Chromium</p>
+                            </div>
+                             <div class="grid grid-cols-[1fr_2fr] gap-4 items-baseline">
+                                <h4 class="text-lg font-medium text-[#3B7235]">Wheatgrass</h4>
+                                <p class="text-stone-700 text-sm leading-relaxed">Chlorophyll, Iron, Calcium, Magnesium, Vitamins A, C, E, Amino Acids</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="grid grid-cols-2 gap-4 reveal" style="transition-delay: 150ms;">
-                    <img src="https://iili.io/Kz9baPs.md.png" alt="A close-up of fresh, vibrant microgreens ready for harvest." class="rounded-3xl shadow-xl w-full h-full object-cover aspect-[4/5]">
-                    <img src="https://cdn.shopify.com/s/files/1/0262/6099/6175/files/Sprouts_1024x1024.png?v=1587405863" alt="A bowl of salad topped with a colorful variety of freshly harvested microgreens." class="rounded-3xl shadow-xl w-full h-full object-cover aspect-[4/5] mt-8">
+
+                <!-- Culinary Inspirations Accordion -->
+                <div class="bg-white rounded-2xl shadow-sm overflow-hidden">
+                    <button class="accordion-btn w-full flex items-center justify-between p-6 text-left focus:outline-none">
+                        <h3 class="text-2xl font-serif text-[#2D4026]">Culinary Inspirations</h3>
+                        <span class="transform transition-transform duration-300 text-[#3B7235]">
+                            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
+                        </span>
+                    </button>
+                     <div class="accordion-content hidden px-6 pb-6">
+                        <div class="grid grid-cols-1 md:grid-cols-3 gap-6 pt-4 border-t border-gray-100">
+                            <div>
+                                <h4 class="text-lg font-serif text-[#3B7235] mb-3">Fresh & Raw</h4>
+                                <ul class="list-disc list-inside text-stone-700 space-y-2 text-sm leading-relaxed">
+                                    <li><strong>Salads:</strong> A vibrant base or flavorful addition.</li>
+                                    <li><strong>Sandwiches & Wraps:</strong> Layer for a fresh crunch.</li>
+                                    <li><strong>Tacos, Burgers & Burritos:</strong> A crisp, nutritious topping.</li>
+                                </ul>
+                            </div>
+                            <div>
+                                <h4 class="text-lg font-serif text-[#3B7235] mb-3">Blended & Sauced</h4>
+                                <ul class="list-disc list-inside text-stone-700 space-y-2 text-sm leading-relaxed">
+                                    <li><strong>Smoothies:</strong> An easy nutrient boost.</li>
+                                    <li><strong>Pesto:</strong> A potent, flavorful basil substitute.</li>
+                                    <li><strong>Sauces & Dips:</strong> Mix into salsa, hummus, or guacamole.</li>
+                                </ul>
+                            </div>
+                            <div>
+                                <h4 class="text-lg font-serif text-[#3B7235] mb-3">Warm & Savory</h4>
+                                <ul class="list-disc list-inside text-stone-700 space-y-2 text-sm leading-relaxed">
+                                    <li><strong>Stir-fries:</strong> Add at the end to maintain freshness.</li>
+                                    <li><strong>Soups & Stews:</strong> A vibrant, fresh garnish.</li>
+                                    <li><strong>Toppings:</strong> Perfect on pasta, rice, eggs, or pizza.</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="mt-8 text-center">
+                            <p class="italic text-[#2D4026]/70 font-serif text-lg">
+                                "Elevate every meal with a simple sprinkle of fresh, living nutrition."
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -639,7 +718,7 @@ function generateCustomBuilderHTML() {
 
         <!-- ADDED DELIVERY AREA NOTICE IN MODAL -->
         <div class="text-center bg-amber-50 border border-amber-200 text-amber-800 p-3 rounded-lg mb-6 text-sm">
-            <strong>Delivery Area:</strong> We currently only deliver to East Portland, Gresham, and Troutdale.
+            <strong>Delivery Area:</strong> We currently only deliver to Eastside Portland, Gresham, and Troutdale.
         </div>
         <!-- END ADDED NOTICE IN MODAL -->
 
@@ -923,6 +1002,19 @@ document.addEventListener('DOMContentLoaded', () => {
     }, { threshold: 0.1 });
 
     document.querySelectorAll('.reveal').forEach(el => observer.observe(el));
+
+    // Accordion Logic
+    const accordionBtns = document.querySelectorAll('.accordion-btn');
+    accordionBtns.forEach(btn => {
+        btn.addEventListener('click', () => {
+            const content = btn.nextElementSibling;
+            const icon = btn.querySelector('span');
+            
+            // Toggle current accordion
+            content.classList.toggle('hidden');
+            icon.classList.toggle('rotate-180');
+        });
+    });
 });
 </script>
 
