--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@ body {
         <p class="text-gray-300 leading-relaxed">
             Need to pause, skip a delivery, or cancel your subscription? No problem!
             <br>
-            Please contact us directly at <a href="mailto:your-email@example.com" class="font-bold text-white underline hover:text-green-200 transition">your-email@example.com</a> or simply reply to any of your order confirmation emails, and we'll take care of it for you.
+            Please contact us directly at <a href="mailto:fourthgatemicrogreens@gmail.com" class="font-bold text-white underline hover:text-green-200 transition">fourthgatemicrogreens@gmail.com</a> or simply reply to any of your order confirmation emails, and we'll take care of it for you.
         </p>
     </div>
     <!-- END ADDED SECTION -->
