--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ body {
         </p>
         <!-- ADDED DELIVERY AREA NOTICE -->
         <p class="mt-4 text-lg font-medium text-green-200 bg-black/30 inline-block px-4 py-2 rounded-full backdrop-blur-sm">
-            Currently delivering to Eastside Portland, Gresham, and Troutdale.
+            Currently delivering to the Eastside of Portland, Gresham, and Troutdale.
         </p>
         <!-- END ADDED NOTICE -->
         <div class="mt-12 flex justify-center">
@@ -718,7 +718,7 @@ function generateCustomBuilderHTML() {
 
         <!-- ADDED DELIVERY AREA NOTICE IN MODAL -->
         <div class="text-center bg-amber-50 border border-amber-200 text-amber-800 p-3 rounded-lg mb-6 text-sm">
-            <strong>Delivery Area:</strong> We currently only deliver to Eastside Portland, Gresham, and Troutdale.
+            <strong>Delivery Area:</strong> We currently only deliver to the Eastside of Portland, Gresham, and Troutdale.
         </div>
         <!-- END ADDED NOTICE IN MODAL -->
 
