--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ body {
         </p>
         <!-- ADDED DELIVERY AREA NOTICE -->
         <p class="mt-4 text-lg font-medium text-green-200 bg-black/30 inline-block px-4 py-2 rounded-full backdrop-blur-sm">
-            Currently delivering to the Eastside of Portland, Gresham, and Troutdale.
+            Currently delivering to East Portland, Gresham, and Troutdale.
         </p>
         <!-- END ADDED NOTICE -->
         <div class="mt-12 flex justify-center">
@@ -314,6 +314,27 @@ body {
                     </div>
                     <h3 class="text-xl font-semibold">3. Enjoy Peak Nutrition</h3>
                     <p class="mt-3 text-stone-700">Elevate your meals with unparalleled flavor, vibrant color, and a powerful nutrient boost.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- About Us Section (RESTORED) -->
+    <section id="about-us" class="py-24 bg-white text-[#2D4026]">
+        <div class="max-w-6xl mx-auto px-6">
+            <h2 class="text-4xl md:text-5xl section-title text-center reveal">Grown With Passion, For You.</h2>
+            <div class="mt-16 grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
+                <div class="space-y-6 reveal">
+                    <p class="text-lg leading-relaxed">
+                        Fourth gate microgreens was founded on a simple belief; everyone deserves access to fresh, local and sustainably grown nutrient rich foods. As owner and head grower my journey in agriculture has been life long. From working on various farms throughout Oregon, being in the professional landscaping industry and going to school studying both horticulture and permaculture.. Working with plants and nature is a labor of love for me, my biggest passion in life and the gift I enjoy sharing most with others. This offering of sharing my passions and gifts with my community through these greens comes straight from the heart.
+                    </p>
+                    <p class="text-lg leading-relaxed">
+						We are committed to a healthier planet, using only organic, earth-friendly methods to bring the vibrant power of nature straight to your table.
+                    </p>
+                </div>
+                <div class="grid grid-cols-2 gap-4 reveal" style="transition-delay: 150ms;">
+                    <img src="https://iili.io/Kz9baPs.md.png" alt="A close-up of fresh, vibrant microgreens ready for harvest." class="rounded-3xl shadow-xl w-full h-full object-cover aspect-[4/5]">
+                    <img src="https://cdn.shopify.com/s/files/1/0262/6099/6175/files/Sprouts_1024x1024.png?v=1587405863" alt="A bowl of salad topped with a colorful variety of freshly harvested microgreens." class="rounded-3xl shadow-xl w-full h-full object-cover aspect-[4/5] mt-8">
                 </div>
             </div>
         </div>
@@ -442,7 +463,7 @@ body {
         <p class="text-gray-300 leading-relaxed">
             Need to pause, skip a delivery, or cancel your subscription? No problem!
             <br>
-            Please contact us directly at <a href="mailto:fourthgatemicrogreens@gmail.com" class="font-bold text-white underline hover:text-green-200 transition">fourthgatemicrogreens@gmail.com</a> or simply reply to any of your order confirmation emails, and we'll take care of it for you.
+            Please contact us directly at <a href="mailto:your-email@example.com" class="font-bold text-white underline hover:text-green-200 transition">your-email@example.com</a> or simply reply to any of your order confirmation emails, and we'll take care of it for you.
         </p>
     </div>
     <!-- END ADDED SECTION -->
@@ -718,7 +739,7 @@ function generateCustomBuilderHTML() {
 
         <!-- ADDED DELIVERY AREA NOTICE IN MODAL -->
         <div class="text-center bg-amber-50 border border-amber-200 text-amber-800 p-3 rounded-lg mb-6 text-sm">
-            <strong>Delivery Area:</strong> We currently only deliver to the Eastside of Portland, Gresham, and Troutdale.
+            <strong>Delivery Area:</strong> We currently only deliver to East Portland, Gresham, and Troutdale.
         </div>
         <!-- END ADDED NOTICE IN MODAL -->
 
