--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ body {
         </p>
         <!-- ADDED DELIVERY AREA NOTICE -->
         <p class="mt-4 text-lg font-medium text-green-200 bg-black/30 inline-block px-4 py-2 rounded-full backdrop-blur-sm">
-            Currently delivering to East Portland, Gresham, and Troutdale.
+            Currently delivering to the Eastside of Portland, Gresham, and Troutdale.
         </p>
         <!-- END ADDED NOTICE -->
         <div class="mt-12 flex justify-center">
@@ -463,7 +463,7 @@ body {
         <p class="text-gray-300 leading-relaxed">
             Need to pause, skip a delivery, or cancel your subscription? No problem!
             <br>
-            Please contact us directly at <a href="mailto:your-email@example.com" class="font-bold text-white underline hover:text-green-200 transition">your-email@example.com</a> or simply reply to any of your order confirmation emails, and we'll take care of it for you.
+            Please contact us directly at <a href="mailto:fourthgatemicrogreens@gmail.com" class="font-bold text-white underline hover:text-green-200 transition">fourthgatemicrogreens@gmail.com</a> or simply reply to any of your order confirmation emails, and we'll take care of it for you.
         </p>
     </div>
     <!-- END ADDED SECTION -->
@@ -739,7 +739,7 @@ function generateCustomBuilderHTML() {
 
         <!-- ADDED DELIVERY AREA NOTICE IN MODAL -->
         <div class="text-center bg-amber-50 border border-amber-200 text-amber-800 p-3 rounded-lg mb-6 text-sm">
-            <strong>Delivery Area:</strong> We currently only deliver to East Portland, Gresham, and Troutdale.
+            <strong>Delivery Area:</strong> We currently only deliver to the Eastside of Portland, Gresham, and Troutdale.
         </div>
         <!-- END ADDED NOTICE IN MODAL -->
 
