--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ body {
             <div class="mt-16 grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
                 <div class="space-y-6 reveal">
                     <p class="text-lg leading-relaxed">
-                        Fourth Gate Microgreens was founded on a simple belief; everyone deserves access to fresh, local and sustainably grown nutrient rich foods. As owner and head grower my journey in agriculture has been life long. From working on various farms throughout Oregon, being in the professional landscaping industry and going to school studying both horticulture and permaculture.. Working with plants and nature is a labor of love for me, my biggest passion in life and the gift I enjoy sharing most with others. This offering of sharing my passions and gifts with my community through these greens comes straight from the heart.
+                        Fourth Gate Microgreens was founded on a simple belief; everyone deserves access to fresh, local and sustainably grown nutrient rich foods. As owner and head grower my journey in agriculture has been life long. From working on various farms throughout Oregon, being in the professional landscaping industry and going to school studying both horticulture and permaculture. Working with plants and nature is a labor of love for me, my biggest passion in life and the gift I enjoy sharing most with others. This offering of sharing my passions and gifts with my community through these greens comes straight from the heart.
                     </p>
                     <p class="text-lg leading-relaxed">
                         We are committed to a healthier planet, using only organic, earth-friendly methods to bring the vibrant power of nature straight to your table.
@@ -334,7 +334,7 @@ body {
                 </div>
                 <div class="grid grid-cols-2 gap-4 reveal" style="transition-delay: 150ms;">
                     <img src="https://iili.io/Kz9baPs.md.png" alt="A close-up of fresh, vibrant microgreens ready for harvest." class="rounded-3xl shadow-xl w-full h-full object-cover aspect-[4/5]">
-                    <img src="https://cdn.shopify.com/s/files/1/0262/6099/6175/files/Sprouts_1024x1024.png?v=1587405863" alt="A bowl of salad topped with a colorful variety of freshly harvested microgreens." class="rounded-3xl shadow-xl w-full h-full object-cover aspect-[4/5] mt-8">
+                    <img src="https://iili.io/KpxdxtI.md.png" alt="A bowl of salad topped with a colorful variety of freshly harvested microgreens." class="rounded-3xl shadow-xl w-full h-full object-cover aspect-[4/5] mt-8">
                 </div>
             </div>
         </div>
