--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ body {
                     </p>
                 </div>
                 <div class="grid grid-cols-2 gap-4 reveal" style="transition-delay: 150ms;">
-                    <img src="https://iili.io/Kz9baPs.md.png" alt="A close-up of fresh, vibrant microgreens ready for harvest." class="rounded-3xl shadow-xl w-full h-full object-cover aspect-[4/5]">
+                    <img src="https://iili.io/KpxBKWQ.md.png" alt="A close-up of fresh, vibrant microgreens ready for harvest." class="rounded-3xl shadow-xl w-full h-full object-cover aspect-[4/5]">
                     <img src="https://iili.io/KpxdxtI.md.png" alt="A bowl of salad topped with a colorful variety of freshly harvested microgreens." class="rounded-3xl shadow-xl w-full h-full object-cover aspect-[4/5] mt-8">
                 </div>
             </div>
