--- a/orders-dashboard.html
+++ b/orders-dashboard.html
@@ -13,7 +13,7 @@
 
     // Firebase Config
    const firebaseConfig = {
-        apiKey: "[YOUR_API_KEY]", // <-- PASTE YOUR API KEY HERE
+        apiKey: "AIzaSyDcwybZJui1WKAujPclyPgBaj_bE7IK-tg", // <-- PASTE YOUR API KEY HERE
         authDomain: "fourth-gate-microgreens.firebaseapp.com",
         projectId: "fourth-gate-microgreens",
         storageBucket: "fourth-gate-microgreens.firebasestorage.app",
